--- a/AspireApp1/AspireApp1.ServiceDefaults/AspireApp1.ServiceDefaults.csproj
+++ b/AspireApp1/AspireApp1.ServiceDefaults/AspireApp1.ServiceDefaults.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <FrameworkReference Include="Microsoft.AspNetCore.App"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.3" />
 
         <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="10.1.0"/>
         <PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="10.1.0"/>
