--- a/AspireApp1/UTB.Minute.Db/UTB.Minute.Db.csproj
+++ b/AspireApp1/UTB.Minute.Db/UTB.Minute.Db.csproj
@@ -8,6 +8,9 @@
 
     <ItemGroup>
       <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="13.1.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.3" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.3" />
+      <PackageReference Include="SQLite" Version="3.13.0" />
     </ItemGroup>
 
 </Project>
