--- a/AspireApp1/UTB.Minute.DbManager/UTB.Minute.DbManager.csproj
+++ b/AspireApp1/UTB.Minute.DbManager/UTB.Minute.DbManager.csproj
@@ -8,6 +8,9 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.9" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.3" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.3" />
+      <PackageReference Include="SQLite" Version="3.13.0" />
     </ItemGroup>
 
     <ItemGroup>
